--- a/sass/source/objects/_bar.scss
+++ b/sass/source/objects/_bar.scss
@@ -7,6 +7,12 @@
 //
 // Used to create a progress bar.
 //
+// <div class="bar">
+//
+//     <div class="bar__value"/>
+//
+// </div>
+//
 
 .bar {
 	@extend %cf;
