--- a/sass/source/objects/_bg.scss
+++ b/sass/source/objects/_bg.scss
@@ -7,6 +7,18 @@
 //
 // The bg object is used to create cover, parallax, and tiles background images.
 //
+// <style>
+//
+//    .bg-nature { 
+//         background-image: url(''); 
+//         max-height: 400px; 
+//         max-width: 2000px; 
+//     }
+//
+// </style>
+//
+// <img src="bg--cover bg--nature"/>
+//
 
 %bg {
 	overflow: hidden;
