--- a/sass/source/objects/_btn.scss
+++ b/sass/source/objects/_btn.scss
@@ -7,7 +7,7 @@
 //
 // The btn object creates flat buttons that appears the same between links and inputs.
 //
-// Thanks to Pure.css
+// <input type="button" class="btn"/>
 //
 
 .btn {
