--- a/sass/source/objects/_data.scss
+++ b/sass/source/objects/_data.scss
@@ -7,6 +7,26 @@
 //
 // The data object is used to create tables for displaying data.
 //
+// <table class="data">
+//
+//     <thead>
+//         <tr>
+//             <th>Head 1</th>
+//             <th>Head 2</th>
+//             <th>Head 3</th>
+//         </tr>
+//     </thead>
+//
+//     <tbody>
+//         <tr>
+//             <td>Body 1</td>
+//             <td>Body 2</td>
+//             <td>Body 3</td>
+//         </tr>
+//     </tbody>
+//
+// </table>
+//
 
 .data th {
     padding-top: 0;
