--- a/sass/source/objects/_dock.scss
+++ b/sass/source/objects/_dock.scss
@@ -7,6 +7,8 @@
 //
 // The dock object helps dock content to the edge of the browser window.
 //
+// <div class="dock dock--t"></div>
+//
 
 .dock {
 	position: absolute;
