--- a/sass/source/objects/_embed.scss
+++ b/sass/source/objects/_embed.scss
@@ -7,6 +7,13 @@
 //
 // The embed object embeds content and preserve the aspect ratio.
 //
+//
+// <div class="embed embed--16-9">
+//
+//     <img class="bg--cover" />
+//
+// </div>
+//
 
 .embed {
 	display: block;
