--- a/sass/source/objects/_img.scss
+++ b/sass/source/objects/_img.scss
@@ -7,6 +7,10 @@
 //
 // The img object is used to float and image and create a margin around it.
 //
+// <p>
+//     <img class="img--r" src="" />
+// </p>
+//
 
 %img {
 	@extend %mb-m;
