--- a/sass/source/objects/_input.scss
+++ b/sass/source/objects/_input.scss
@@ -7,6 +7,8 @@
 //
 // The input object is used to create textboxes without needing the [type] selector.
 //
+// <input type="text" class="input block" />
+//
 
 .input {
 	display: inline-block;
