--- a/sass/source/objects/_sect.scss
+++ b/sass/source/objects/_sect.scss
@@ -7,6 +7,12 @@
 //
 // The sect object is used to section off a portion of the page.
 //
+// <div class="sect">
+//
+//     <div class="sect__body"> </div>
+//
+// </div>
+//
 
 .sect__body {
 	margin: 0 auto;
