--- a/sass/source/objects/_alert.scss
+++ b/sass/source/objects/_alert.scss
@@ -7,6 +7,7 @@
 //
 // The alert object is used to create alert notifications.
 //
+// <div class="alert danger"></div>
 
 .alert {
 	@extend %mb-m;
