--- a/sass/source/objects/_matrix.scss
+++ b/sass/source/objects/_matrix.scss
@@ -7,6 +7,14 @@
 //
 // The matrix object creates a grid out of a list. 
 //
+// <ul class="matrix">
+//
+//     <li class="w-1-3"><a href="#">Item 1</a></li>
+//     <li class="w-1-3"><a href="#">Item 1</a></li>
+//     <li class="w-1-3"><a href="#">Item 1</a></li>
+//
+// </ul>
+//
 
 .matrix {
 	@extend %cf;
