--- a/sass/source/objects/_nav.scss
+++ b/sass/source/objects/_nav.scss
@@ -7,7 +7,13 @@
 //
 // The nav object creates navigation lists.
 //
-// Thanks to ScalesCSS
+// <ul class="nav">
+//
+//     <li><a href="#">Item 1</a></li>
+//     <li><a href="#">Item 2</a></li>
+//     <li><a href="#">Item 3</a></li>
+//
+// </ul>
 //
 
 .nav {
