--- a/sass/source/quarks/_reset.scss
+++ b/sass/source/quarks/_reset.scss
@@ -22,12 +22,18 @@ html { font-family:sans-serif; -ms-text-size-adjust:100%; -webkit-text-size-adju
 // Border-box subtracts pixels from the width so the box does not expand.
 //
 
-html *
+html 
 {
 	-webkit-box-sizing: border-box;
 	   -moz-box-sizing: border-box;
-	    -ms-box-sizing: border-box;
-	     -o-box-sizing: border-box;
+	        box-sizing: border-box;
+}
+
+*, 
+*:before, 
+*:after {
+	-webkit-box-sizing: border-box;
+	   -moz-box-sizing: border-box;
 	        box-sizing: border-box;
 }
 
